[gd_scene load_steps=8 format=3 uid="uid://b4c8pmrccxkr"]

[ext_resource type="Script" path="res://obstacles/banana.gd" id="1_vaqnv"]
[ext_resource type="Texture2D" uid="uid://baexlmeqh0vgq" path="res://obstacles/sprites/Casca de banana 108x108.png" id="2_mvkel"]
[ext_resource type="AudioStream" uid="uid://b6dgqwrr8qnic" path="res://sfx/toinoinoinoin.mp3" id="3_km13k"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8pjow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lqfx3"]
size = Vector2(96, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxon1"]
size = Vector2(96, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7u63"]
size = Vector2(108, 108)

[node name="banana" type="RigidBody2D"]
collision_layer = 4
physics_material_override = SubResource("PhysicsMaterial_8pjow")
script = ExtResource("1_vaqnv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_lqfx3")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(48, -25)
collision_layer = 4
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_oxon1")

[node name="Sprite2D" type="Sprite2D" parent="Area2D2"]
visible = false
position = Vector2(0, 5)
texture = ExtResource("2_mvkel")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-378, -54)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_v7u63")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_km13k")

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
